--- a/wasp_autonomous_systems/package.xml
+++ b/wasp_autonomous_systems/package.xml
@@ -8,6 +8,20 @@
   <maintainer email="dduberg@kth.se">Daniel Duberg</maintainer>
   <license>TODO: License declaration</license>
 
+  <exec_depend>builtin_interfaces</exec_depend>
+  <exec_depend>controller_manager</exec_depend>
+  <exec_depend>control_msgs</exec_depend>
+  <exec_depend>diff_drive_controller</exec_depend>
+  <exec_depend>joint_state_broadcaster</exec_depend>
+  <exec_depend>rclpy</exec_depend>
+  <exec_depend>robot_state_publisher</exec_depend>
+  <exec_depend>ros2launch</exec_depend>
+  <exec_depend>turtlebot3_description</exec_depend>
+  <exec_depend>wasp_autonomous_systems_interfaces</exec_depend>
+  <exec_depend>webots_ros2_driver</exec_depend>
+  <exec_depend>webots_ros2_control</exec_depend>
+  <exec_depend>webots_ros2_turtlebot</exec_depend>
+
   <export>
     <build_type>ament_python</build_type>
   </export>
