--- a/wasp_autonomous_systems/resource/ros2control.yaml
+++ b/wasp_autonomous_systems/resource/ros2control.yaml
@@ -10,8 +10,8 @@ controller_manager:
 
 diffdrive_controller:
   ros__parameters:
-    left_wheel_names: ["left wheel motor"]
-    right_wheel_names: ["right wheel motor"]
+    left_wheel_names: ["wheel_left_motor"]
+    right_wheel_names: ["wheel_right_motor"]
 
     wheel_separation: 0.16
     wheel_radius: 0.033
@@ -21,9 +21,3 @@ diffdrive_controller:
 
     use_stamped_vel: false
     base_frame_id: "base_link"
-
-joint_state_broadcaster:
-  ros__parameters:
-    extra_joints:
-      - LDS-01_secondary_motor
-      - LDS-01_main_motor
